elearningProject/force-app/main/default/objects/Module_Progress__c/fields/Module_Status__c.field-meta.xml
<CustomField>
    <fullName>Module_Status__c</fullName>
    <label>Module Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>