elearningProject/force-app/main/default/objects/Module_Progress__c/fields/Num_of_completed_units__c.field-meta.xml
<CustomField>
    <fullName>Num_of_completed_units__c</fullName>
    <label>Num of completed units</label>
    <summaryFilterItems>
        <field>Unit_progress__c.Unit_completed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Unit_progress__c.Module_Progress__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>