elearningProject/force-app/main/default/objects/Module_Progress__c/fields/NumberOfUnits__c.field-meta.xml
<CustomField>
    <fullName>NumberOfUnits__c</fullName>
    <description>The number of Units included in the related Module</description>
    <label>NumberOfUnits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>