elearningProject/force-app/main/default/objects/Module_Progress__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <formula>Num_of_completed_units__c /  Module__r.Num_of_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>