elearningProject/force-app/main/default/objects/Module_Progress__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Modules Progress</relationshipLabel>
    <relationshipName>Modules_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>