elearningProject/force-app/main/default/objects/Module_Progress__c/fields/Student_Module_Score__c.field-meta.xml
<CustomField>
    <fullName>Student_Module_Score__c</fullName>
    <label>Student Module Score</label>
    <summarizedField>Unit_progress__c.Student_Unit_Score__c</summarizedField>
    <summaryForeignKey>Unit_progress__c.Module_Progress__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>